[tool.poetry]
name = "armoz-slack"
version = "0.1.0"
description = "A simple Slack OAuth2 integration with FastAPI"
authors = ["James Yin <jamesyinbaare@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
slack-sdk = "^3.22.0"
pyjwt = "^2.8.0"
aiohttp = "^3.8.5"



[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125
[tool.isort]
profile = "black"
